Cleanup in document classes.